# isoDDE

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  benchmarks.md
examples/: identify_pockets.py  predict_affinity.py  predict_structure.py
isodde/: __init__.py  cli.py  config.py  io.py  pipeline.py  web.py
isodde/data/: __init__.py  chemical.py  features.py  tokenizer.py
isodde/evaluation/: __init__.py  benchmarks.py  metrics.py  violations.py
isodde/model/: __init__.py  affinity.py  affinity_loss.py  confidence.py  diffusion.py  heads.py  interface_contact.py  interface_loss.py  isodde_structure.py  msa_module.py  pairformer.py  pocket.py  pocket_utils.py  primitives.py  protein_ligand_contact.py  protein_ligand_loss.py  sample.py  triangular_attention.py  triangular_multiplication.py
isodde/static/: app.js  index.html  style.css
isodde/utils/: __init__.py  geometry.py  tensor_utils.py
tests/: __init__.py  test_features_extra.py  test_geometry.py  test_interface_contact.py  test_io_extra.py  test_loss_extra.py  test_metrics.py  test_model.py  test_model_extra.py  test_pipeline.py  test_protein_ligand_contact.py  test_violations.py  test_web.py
