[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "isodde"
version = "0.1.0"
description = "IsoDDE: Isomorphic Labs Drug Design Engine — structure prediction, binding affinity, and pocket identification for biomolecular interactions"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Pratik Shah", email = "shahip2016@gmail.com"},
]
keywords = [
    "drug-design",
    "protein-structure-prediction",
    "binding-affinity",
    "molecular-docking",
    "deep-learning",
    "alphafold",
    "biomolecular-interactions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "einops>=0.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "biopython>=1.81",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
isodde = "isodde.cli:main"

[project.urls]
Homepage = "https://github.com/Shahip2016/isoDDE"
Repository = "https://github.com/Shahip2016/isoDDE"

[tool.setuptools.packages.find]
include = ["isodde*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"
